Simplifying admin level 1 on the fly. tweaked the events infowindow to max width possible. changed the color of the location boundaries.

--- a/public/stylesheets/web-app-theme/override.css
+++ b/public/stylesheets/web-app-theme/override.css
@@ -68,11 +68,10 @@ input.checkbox {
   *overflow: hidden;
 }
 
-#event_infowindow{
-  width: 250px;
-  height: 150px;
+.infowindow_updated_at{
+  font-size 0.75em;
+  color: #666;
 }
-
 .project-description{
   font-size: 1.3em!important;
 }
