Added initial search tab. Refactored the nav partial Fixed deprications in views TODO: removed superfilous _navs

--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -43,7 +43,7 @@
         #map_canvas
 
   .group.navform.wat-cf
-    - content_tag :button, :type => :submit, :class => 'button' do
+    = content_tag :button, :type => :submit, :class => 'button' do
       = image_tag "icons/tick.png"
       =t(:save)
 
