--- a/app/views/locations/_form.html.haml
+++ b/app/views/locations/_form.html.haml
@@ -26,7 +26,7 @@
         = f.label :admin_level, :class => 'label'
         = f.text_field :admin_level, :class => 'text_field'
   .group.navform.wat-cf
-    - content_tag :button, :type => :submit, :class => 'button' do
+    = content_tag :button, :type => :submit, :class => 'button' do
       = image_tag "icons/tick.png"
       =t(:save)
     = link_to t(:back), locations_path, :class => 'button'
