--- a/app/views/partners/_nav.html.haml
+++ b/app/views/partners/_nav.html.haml
@@ -1,5 +1,5 @@
 - content_for :nav do
   %li.first=link_to t(:projects), projects_url
   %li=link_to t(:sectors), sectors_url
-  %li.active=link_to t(:partners), partners_url
+  %li{ :class => ("active" if controller.controller_name =~ /partners/i) }=link_to t(:partners), partners_url
   %li=link_to t(:locations), locations_url
