--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -3,7 +3,7 @@
   = javascript_include_tag 'vendor/GeoJSON', 'map-helpers'
   = render 'js/show-map_js'
 
-= render :partial => "nav"
+= render :partial => "shared/nav"
 
 
 
