--- a/app/views/sectors/_form.html.haml
+++ b/app/views/sectors/_form.html.haml
@@ -22,7 +22,7 @@
         %label.label Preview
         #sector_description-preview.markdown_preview
   .group.navform.wat-cf
-    - content_tag :button, :type => :submit, :class => 'button' do
+    = content_tag :button, :type => :submit, :class => 'button' do
       = image_tag "icons/tick.png"
       =t(:save)
     = link_to t(:back), sectors_path, :class => 'button'
