--- a/app/views/locations/_location.html.haml
+++ b/app/views/locations/_location.html.haml
@@ -16,10 +16,10 @@
           - location.children.map{|loc| [loc.id, loc.name]}.each_slice(5) do |v|
             %tr{:class=>cycle('odd','even')}
               - v.each do |l|
-                %td
-                  - project_count = Location.find(l[0]).projects.size
+                - project_count = Location.find(l[0]).projects.size
+                %td{ :class => project_count > 0 ? "has_project" : "" }
                   - if project_count > 0
-                    %span.location.has_project
+                    %span.location
                       = link_to "#{l[1]} (#{pluralize(project_count, 'project')})", location_path(l[0])
                   - else
                     %span.location= link_to l[1], location_path(l[0])
