updated markercluster.js and now clicking on a cluster does not zoom in to the bounds of the cluster.

--- a/app/views/js/_show-location-map_js.haml
+++ b/app/views/js/_show-location-map_js.haml
@@ -48,7 +48,7 @@
       markers.push(event_marker);
     })
 
-    var markerCluster = new MarkerClusterer(map, markers);
+    var markerCluster = new MarkerClusterer(map, markers, {zoomOnClick: false});
 
     // TODO: CHECK: Instead of the above, AJAX is also possible see routes.rb - not sure which is faster though
     // $.getJSON(pathname+'/events.json', function(geojson) {
