--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -1,10 +1,12 @@
+-content_for :head do
+  =javascript_include_tag 'http://maps.google.com/maps/api/js?sensor=false'
+
 - content_for :outer do
   = stylesheet_link_tag 'map'
-  = javascript_include_tag 'vendor/GeoJSON', 'map-helpers'
+  = javascript_include_tag 'vendor/GeoJSON', 'map-helpers', 'vendor/markerclusterer_packed'
   = render 'js/show-map_js'
 
 = render :partial => "shared/nav"
-
 
 
 .project.block
