Beginning of new Location Settings, inputtoken

--- a/app/views/settings/edit.html.haml
+++ b/app/views/settings/edit.html.haml
@@ -18,12 +18,12 @@
             .column.left
               .field.group
                 = f.label :locations, :class => 'label'
-                / TODO: Tree Selection
-                = f.select :location_id, @locations.collect{ |l| ["... "*l.admin_level+"#{l.admin_level} : #{l.name}", l.id ]}, :class => 'select'
-
-              .field.group
-                = f.label :language, :class => 'label'
-                = f.text_field :language, :class => 'text_field'
+                // TODO: New Design
+                //= f.select :location_id, @locations.collect{ |l| ["... "*l.admin_level+"#{l.admin_level} : #{l.name}", l.id ]}, :class => 'select'
+                //%input{:id => 'settingsSearch'}
+                %input{:autosave => "bsn_srch", :placeholder => "Search...", :results => "5", :type => "search", :id => 'settingsSearch'}/
+                :javascript
+                  $(document).ready(function () {$("#settingsSearch").tokenInput("/en/locations/1.json")});
 
               .group.navform.wat-cf
                 = content_tag :button, :type => :submit, :class => 'button' do
