added markerclusterer to mobile format.

--- a/app/views/js/_show-map_js.haml
+++ b/app/views/js/_show-map_js.haml
@@ -56,7 +56,7 @@
         });
         markers.push(event_marker);
       });
-      markerCluster = new MarkerClusterer(map, markers);
+      markerCluster = new MarkerClusterer(map, markers, {zoomOnClick: false});
     });
 
 
