--- a/app/views/projects/show.mobile.haml
+++ b/app/views/projects/show.mobile.haml
@@ -1,6 +1,6 @@
 - content_for :head do
   = stylesheet_link_tag 'map'
-  = javascript_include_tag 'vendor/GeoJSON', 'map-helpers'
+  = javascript_include_tag 'vendor/GeoJSON', 'map-helpers', 'vendor/markerclusterer_packed'
   = render 'js/show-map_js'
 
 #header{"data-role" => "header"}
