Remove streetview and pan view icons and set zoom when reseting.

--- a/app/views/js/_show-location-map_js.haml
+++ b/app/views/js/_show-location-map_js.haml
@@ -12,6 +12,9 @@
     var mapOptions = {
       zoom: 5,
       center: center,
+      panControl: false,
+      zoomControl: true,
+      streetViewControl: false,
       mapTypeId: google.maps.MapTypeId.TERRAIN,
       zoomControlOptions: {
             style: google.maps.ZoomControlStyle.SMALL
