--- a/app/views/js/_show-map_js.haml
+++ b/app/views/js/_show-map_js.haml
@@ -18,9 +18,9 @@
       zoom: 6,
       center: myLatlng,
       mapTypeId: google.maps.MapTypeId.TERRAIN,
-      panControl: controlVisible,
+      panControl: false,
       zoomControl: controlVisible,
-      streetViewControl: controlVisible,
+      streetViewControl: false,
       zoomControlOptions: {
             style: google.maps.ZoomControlStyle.SMALL
       }
