move article to the project scope

--- a/app/views/articles/edit.html.haml
+++ b/app/views/articles/edit.html.haml
@@ -2,6 +2,6 @@
 
 = render 'form'
 
-= link_to 'Show', @article
+= link_to 'Show', [@project,@article]
 \|
-= link_to 'Back', articles_path
+= link_to 'Back', [@project, :articles]
