--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -14,10 +14,10 @@
       %td= article.content_html
       %td= article.published_at
       %td= article.author_id
-      %td= link_to 'Show', article
-      %td= link_to 'Edit', edit_article_path(article)
-      %td= link_to 'Destroy', article, :confirm => 'Are you sure?', :method => :delete
+      %td= link_to 'Show', [@project, article]
+      %td= link_to 'Edit', [:edit, @project, article]
+      %td= link_to 'Destroy', [@project, article], :confirm => 'Are you sure?', :method => :delete
 
 %br
 
-= link_to 'New Article', new_article_path
+= link_to 'New Article', [:new, @project, :article]
