--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -10,6 +10,6 @@
   %b Author:
   = @article.author_id
 
-= link_to 'Edit', edit_article_path(@article)
+= link_to 'Edit', [:edit, @project, @article]
 \|
-= link_to 'Back', articles_path
+= link_to 'Back', [@project, :articles]
