--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -14,10 +14,10 @@
     %h3=t(:sort_options)
     .content
       %ul.navigation
-        %li{:class => ("current_sort" if session[:articles_sort_order] == 'articles.name asc') }
-          = link_to_unless(session[:articles_sort_order] == 'articles.name asc', t(:alphabetical_asc), articles_path(:sort_order => 'articles.name asc'))
-        %li{:class => ("current_sort" if session[:articles_sort_order] == 'articles.name desc') }
-          = link_to_unless(session[:articles_sort_order] == 'articles.name desc', t(:alphabetical_desc), articles_path(:sort_order => 'articles.name desc'))
+        %li{:class => ("current_sort" if session[:articles_sort_order] == 'articles.title asc') }
+          = link_to_unless(session[:articles_sort_order] == 'articles.title asc', t(:alphabetical_asc), articles_path(:sort_order => 'articles.title asc'))
+        %li{:class => ("current_sort" if session[:articles_sort_order] == 'articles.title desc') }
+          = link_to_unless(session[:articles_sort_order] == 'articles.title desc', t(:alphabetical_desc), articles_path(:sort_order => 'articles.title desc'))
         %li{:class => ("current_sort" if session[:articles_sort_order] == 'articles.created_at asc') }
           = link_to_unless(session[:articles_sort_order] == 'articles.created_at asc', t(:created_at_asc), articles_path(:sort_order => 'articles.created_at asc'))
         %li{:class => ("current_sort" if session[:articles_sort_order] == 'articles.created_at desc') }
