--- a/app/views/articles/_form.html.haml
+++ b/app/views/articles/_form.html.haml
@@ -7,6 +7,9 @@
           %li= msg
 
   .field
+    = f.label :title
+    = f.text_field :title
+  .field
     = f.label :content
     = f.text_area :content
   .field
