--- a/app/views/settings/edit.html.haml
+++ b/app/views/settings/edit.html.haml
@@ -1,4 +1,14 @@
-= render :partial => 'nav'
+-content_for :head do
+  =javascript_include_tag 'http://maps.google.com/maps/api/js?sensor=false'
+
+
+- content_for :outer do
+  = stylesheet_link_tag 'map'
+  = javascript_include_tag 'vendor/GeoJSON', 'map-helpers', 'vendor/markerclusterer_packed'
+  = render 'js/show-settings-map_js'
+
+= render :partial => "shared/nav"
+
 
 .block
   .content
@@ -21,10 +31,13 @@
                 // TODO: New Design
                 //= f.select :location_id, @locations.collect{ |l| ["... "*l.admin_level+"#{l.admin_level} : #{l.name}", l.id ]}, :class => 'select'
                 //%input{:id => 'settingsSearch'}
-                %input{:autosave => "bsn_srch", :placeholder => "Search...", :results => "5", :type => "search", :id => 'settingsSearch'}/
+                %input{:autosave => "bsn_srch", :placeholder => "Search...", :results => "5", :type => "search", :id => 'settingsSearch'}
                 :javascript
                   $(document).ready(function () {$("#settingsSearch").tokenInput("/en/locations/1.json")});
-
+            .column.right
+              #map
+                #map_canvas      
+                  
               .group.navform.wat-cf
                 = content_tag :button, :type => :submit, :class => 'button' do
                   = image_tag "icons/tick.png"
