awesome location search!

--- a/app/views/settings/edit.html.haml
+++ b/app/views/settings/edit.html.haml
@@ -33,11 +33,51 @@
                 //%input{:id => 'settingsSearch'}
                 %input{:autosave => "bsn_srch", :placeholder => "Search...", :results => "5", :type => "search", :id => 'settingsSearch'}
                 :javascript
-                  $(document).ready(function () {$("#settingsSearch").tokenInput("/search/locations")});
+                  var resultsOverlays = [];
+                  function clearOverlays() {
+                    console.log(resultsOverlays);
+                    if (resultsOverlays) {
+                      $.each(resultsOverlays, function(index, value) {
+                        value.overlay.setMap(null);
+                      });
+                    }
+                  }
+                  function clearOverlay(id) {
+                    console.log(resultsOverlays);
+                    if (resultsOverlays) {
+                      $.each(resultsOverlays, function(index, value) {
+                        if (value.id == id) {
+                          value.overlay.setMap(null);
+                          value.overlay = null;
+                          resultsOverlays.splice(index, 1);
+                        }
+                      });
+                    }
+                  }
+
+                  $(document).ready(function () {$("#settingsSearch").tokenInput("/search/locations",
+                  { onAdd: updateMap, tokenLimit: 2, minChars: 3, onResult: preprocess_results, onDelete: function(item){clearOverlay(item.id)} })});
+
+                  function preprocess_results(results) {return results; };
+
+                  function updateMap(item){
+                    $.getJSON('/locations/'+item.id+'.json', function(geojson) {
+                      // clearOverlays();
+                      var l = new GeoJSON(geojson, { strokeColor: "#444", strokeWeight:1, strokeOpacity: 0.75 });
+                      l.setMap(map);
+                      resultsOverlays.push({"id": item.id, "overlay": l});
+                      console.log(resultsOverlays);
+                      var bounds = l.getBounds();
+                      map.panToBounds(bounds);
+                      map.fitBounds(bounds);
+                    });
+                    return false;
+                  }
+
             .column.right
               #map
                 #map_canvas      
-                  
+              %br
               .group.navform.wat-cf
                 = content_tag :button, :type => :submit, :class => 'button' do
                   = image_tag "icons/tick.png"
