--- a/app/views/images/_form.html.haml
+++ b/app/views/images/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @image, :html => { :mutipart => true } do |f|
+= form_for @image, :html => { :multipart => true } do |f|
   -if @image.errors.any?
     #error_explanation
       %h2= "#{pluralize(@image.errors.count, "error")} prohibited this image from being saved:"
