--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -3,7 +3,7 @@
   = javascript_include_tag 'vendor/wmd/wmd.combined.min'
 
 
-= form_for [@project, @event] do |f|
+= form_for [@project, @event], :html => { :multipart => true }  do |f|
   -if @event.errors.any?
     #error_explanation
       %h2= "#{pluralize(@event.errors.count, "error")} prohibited this event from being saved:"
@@ -37,6 +37,10 @@
             %span.geocode_link=link_to t(:geocode_this_address), nil, :class => 'geocode_address button'
             / FIXME: OR needed
             =link_to t(:use_current_location), nil, :class => 'use_current_location button'
+        .field.group
+          %label.label New Images:
+          = f.fields_for :images do |image_fields|
+            = image_fields.file_field :asset, :class => 'file_field'
 
     .column.right
       #map
