Refactored search views.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,7 +24,7 @@
         .flash
           - flash.each do |type, message|
             %div{:class => "message #{type}"}
-              %p= message
+              %p=raw(message)
         #main
           = yield
           #footer
