--- a/app/views/shared/_includes.html.haml
+++ b/app/views/shared/_includes.html.haml
@@ -2,6 +2,7 @@
 = stylesheet_link_tag 'zoombox/zoombox'
 = stylesheet_link_tag 'token-input-facebook'
 = stylesheet_link_tag 'print', :media => 'print'
+= stylesheet_link_tag 'compiled/application', :media => 'screen, projection'
 
 = javascript_include_tag :defaults, :cache => true
 = javascript_include_tag "vendor/web-socket-js/swfobject", "vendor/web-socket-js/FABridge", "vendor/web-socket-js/web_socket"
