--- a/app/views/search/projects.haml
+++ b/app/views/search/projects.haml
@@ -40,7 +40,6 @@
           = label_tag :partners, t(:partners), :class => 'label'
           = text_field_tag 'search[partner_ids]', '', :class => 'text_field',
               "data-partner_pre" => @project_search.tokens[:partners].to_json
-
         .group.navform.wat-cf
           = content_tag :button, :type => :submit, :class => 'button' do
             = image_tag "icons/tick.png"
@@ -48,8 +47,10 @@
           %a.button{:href => search_path}
             = image_tag "icons/cross.png", :alt => "Cancel"
             =t('clear_results')
+
+      / results
       - unless @project_search.results.nil?
-        %h3=t('results') + " (#{@project_search.results.size})"
-        %ul
-        - @project_search.results.each do |result|
-          %li= link_to result.title, project_path(result)
+        #projects
+          %h3=t('results') + " (#{@project_search.results.size})"
+          -projects_search_description(@project_search.tokens)
+          =render :partial => "project", :collection => @project_search.results
