--- a/app/views/articles/_form.html.haml
+++ b/app/views/articles/_form.html.haml
@@ -1,3 +1,7 @@
+-content_for :head do
+  = stylesheet_link_tag 'wmd/wmd.css'
+  = javascript_include_tag 'vendor/wmd/wmd.combined.min'
+
 = form_for @article do |f|
   -if @article.errors.any?
     #error_explanation
@@ -6,14 +10,33 @@
         - @article.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = f.label :content
-    = f.text_area :content
-  .field
-    = f.label :published_at
-    = f.datetime_select :published_at
-  .field
-    = f.label :author_id
-    = f.text_field :author_id
-  .actions
-    = f.submit 'Save'
+  .field.group
+    .field
+      = f.label :title, :class => 'label'
+      = f.text_field :title, :class => 'text_field'
+
+    .field
+      = f.label :content, :class => 'label'
+      #content-button-bar
+      = f.text_area :content, :class => 'text_area'
+
+    .field.group
+      %label.label Preview
+      #article_content-preview.markdown_preview
+
+    .field
+      = f.label :published_at, :class => 'label'
+      = f.datetime_select :published_at
+
+      = f.hidden_field :project_id, :value => @project.id
+
+    .actions
+      = f.submit 'Save'
+
+:javascript
+  setup_wmd({
+      input: "article_content",
+      button_bar: "content-button-bar",
+      preview: "article_content-preview"
+      // output: "copy_html"
+  });
